@@ -109,6 +109,9 @@ RELEASE 0.95 - XXX
 
   - Fix calling Configure() from more than one subsidiary SConscript file.
 
+  - Fix the env.Action() method so it returns the correct type of
+    Action for its argument(s).
+
   From Vincent Risi:
 
   - Add support for the bcc32, ilink32 and tlib Borland tools.
